Fix empty category in sidebar when "Highlight Changed Settings" is enabled

1. MenuProxyModel::filterHighlightsEntries is never used in the UI.
Probably legacy code.
2. And MenuProxyModel::setFilterHighlightsEntries doesn't call invalidateRowsFilter
like setShowIrrelevantModules does.
3. And it's default to true in ctor, while later changed to false in SidebarMode.cpp.
4. The end result is that the final branch in MenuProxyModel::filterAcceptsRow which
hides irrelevant categories only gets run once, at app startup. There after, it's always
the filterHighlightsEntries==false branch that is run, e.g., when the user toggles
"Highlight Changed Settings" in the sidebar, and the model is refreshed.

BUG: 518868